Fix text overflow bug w/ search nav item

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,7 @@
 }
 a[data-icon] {
   visibility: hidden;
+  overflow: hidden;
   width: 1em;
   &:before {
     visibility: visible;
